
syntax = "proto3";


package todoPackage;


service Todo{
    
    rpc createTodo(TodoText) returns (TodoItem);
    rpc createMultipleTodos(stream TodoText) returns (multipleResponse);
    rpc readTodosStream(empty) returns (stream TodoItem);
    rpc echo(stream TodoText) returns(stream TodoText);

}

message empty{}

message TodoText{
    string text =1;
}

message TodoItem{
    int32 id =1;
    string text =2;
}

message multipleResponse{
    bool added=1;
    int32 count=2;
}